# reddit-notifier

./: .env.example  .gitignore  README.md
project/: pyproject.toml
project/src/project/: __init__.py
