[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Partha Pratim Deka",email = "parthapratimdeka129@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyqt5 (>=5.15.11,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "praw (>=7.8.1,<8.0.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
